configuracao bootRun no build.gradle para otimizar HazelCast