@@ -13,6 +13,17 @@ repositories {
     mavenCentral()
 }
 
+bootRun {
+    //jvmArgs necessary for HazelCast improve performance in Java 9+
+    jvmArgs = ["--add-modules=java.se",
+               "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+               "--add-opens=java.base/java.lang=ALL-UNNAMED",
+               "--add-opens=java.base/java.nio=ALL-UNNAMED",
+               "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+               "--add-opens=java.management/sun.management=ALL-UNNAMED",
+               "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
 ext {
     jaxbVersion = '2.3.0'
     camelVersion = '2.24.1'
